# retrospectives

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  start.sh
backend/: GENAI_API.md  TESTING.md  conftest.py  make_demo_data.py  manage.py  manual_test_runner.py  pyproject.toml  requirements-prod.txt  requirements.txt  run_tests.py  start.sh  update_item_coordinates.py
backend/api/: __init__.py  admin.py  apps.py  models.py  schemas.py  serializers.py  test_basic.py  test_models.py  test_serializers.py  test_simple.py  test_views.py  urls.py  views.py
backend/api/genai/: ollama_playground.py
backend/api/management/commands/: create_genai_user.py
backend/api/migrations/: 0001_initial.py  0002_rename_full_name_user_userfullname.py  0003_retrospective_team.py  0004_retrospectiveitem_x_retrospectiveitem_y_and_more.py  0005_remove_retrospectiveitem_x_and_more.py  0006_retrospectiveitem_cluster_id.py
backend/api/services/: cluster_retroitems.py  generate_actionitems.py
backend/app/: __init__.py
backend/retrospectives/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: RetrospectiveSquare.vue
frontend/src/router/: index.ts
frontend/src/utils/: config.ts  scaling.ts
frontend/src/views/: CreateRetrospectivesView.vue  CreateUsersView.vue  HomeView.vue  LoginView.vue  ManageRetrospectivesView.vue  ManageTeamsView.vue  RetrospectiveDetailView.vue  TeamsView.vue  (+2 more)
